@@ -11,6 +11,5 @@ public class StaticStrings {
 	// Properties
 	public static final String CCW_PROPERTY_NREPL_PORT = "ccw.nrepl.port";
 	public static final String CCW_PROPERTY_NREPL_AUTOSTART = "ccw.nrepl.autostart";
-	public static final String CCW_PROPERTY_NREPL_CIDER_ENABLE = "ccw.nrepl.cider.enable";
-	
+
 }
